# tlv

./: CMakeLists.txt  PULL_REQUEST_TEMPLATE  README.md  doxygen.conf.in
.github/: pull_request_template.md
tests/: CMakeLists.txt  encoder_test.cpp  endianness_test.cpp  stream_test.cpp
tlvlib/: CMakeLists.txt
tlvlib/include/: config.hpp  config.hpp.in  encoder.hpp  endianness.hpp  endianness_utils.hpp  stream.hpp  type_encoder.hpp  type_encoder.inl  utils.hpp
tlvlib/src/: encoder.cpp  endianness_utils.cpp  stream.cpp
